# awEditor

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: color.vert  mesh.frag  simple.vert
config/: engine.json
source/: CMakeLists.txt  editorState.cpp  editorState.hpp  main.cpp
source/components/: collisionCube.hpp  collisionCubeId.hpp
source/events/: CMakeLists.txt  collisionMeshEvent.hpp  meshEvent.hpp
source/gui/: CMakeLists.txt  gui.cpp  gui.hpp  guiEvent.hpp
source/gui/modules/: CMakeLists.txt  propertiesPanel.cpp  propertiesPanel.hpp  propertiesPanelEvents.hpp  property.hpp  vec3Property.cpp  vec3Property.hpp
source/gui/setup/: CMakeLists.txt  collisionPanel.cpp  collisionPanel.hpp  menuBar.hpp  modals.hpp
source/managers/: CMakeLists.txt  cameraManager.cpp  cameraManager.hpp  collisionCubeManager.cpp  collisionCubeManager.hpp  meshManager.cpp  meshManager.hpp  meshPreviewHandler.cpp  meshPreviewHandler.hpp  viewportManager.cpp  viewportManager.hpp
source/renderers/: CMakeLists.txt  collisionCubesRenderer.cpp  collisionCubesRenderer.hpp
source/systems/: CMakeLists.txt  collisionCubeRenderSystem.cpp  collisionCubeRenderSystem.hpp
source/utils/: CMakeLists.txt  rayTracer.cpp  rayTracer.hpp
